<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main-->
    <string name="app_name">微信</string>
    <string name="contacts">通讯录</string>
    <string name="me">我</string>
    <string name="discover">发现</string>
    <string name="recommended_friends">新的朋友</string>
    <string name="group_chats">群聊</string>
    <string name="official_accounts">公众号</string>
    <string name="no_msg">暂时没有新消息</string>

    <string name="action_settings">Settings</string>
    <string name="menu_groupchat">发起群聊</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_qrcode">扫一扫</string>
    <string name="menu_money">微信钱包</string>

    <!-- Login-->
    <string name="countries_and_areas">国家和地区</string>
    <string name="login_txt_china">中国</string>
    <string name="login_txt_yourphone">你的手机号码</string>
    <string name="login_txt_username">你的用户名</string>
    <string name="login_txt_nickname">你的昵称</string>
    <string name="login_hint_code">输入验证码</string>
    <string name="login_txt_code">验证码</string>
    <string name="login_btn_sendcode">发送验证码</string>
    <string name="login_txt_86">+86</string>
    <string name="login_txt_inputpwd">填写密码</string>
    <string name="login_btn_action">登录</string>
    <string name="login_btn_register">注册</string>
    <string name="login_txt_qustion">登录遇到问题？</string>
    <string name="login_tip_tel_error">请输入正确的手机号！</string>
    <string name="login_tip_loginerror">登录失败</string>

    <!-- profile-->
    <string name="profile_txt_album">相册</string>
    <string name="profile_txt_collect">收藏</string>
    <string name="profile_txt_money">钱包</string>
    <string name="profile_txt_card">卡包</string>
    <string name="profile_txt_smail">表情</string>
    <string name="profile_txt_setting">设置</string>
    <string name="profile_txt_username">Allen Juns</string>
    <string name="profile_txt_userid">微信号：dada2012625</string>
    <string name="profile_txt_mycode">我的二维码</string>

    <!--UserInfo-->
    <string name="userinfo_txt_title">个人信息</string>
    <string name="userinfo_txt_profile">详细资料</string>
    <string name="userinfo_txt_avatar">头像</string>
    <string name="userinfo_txt_nick">昵称</string>
    <string name="userinfo_txt_name">微信号</string>
    <string name="userinfo_txt_qrcode">二维码名片</string>
    <string name="userinfo_txt_address">我的地址</string>
    <string name="userinfo_txt_sex">性别</string>
    <string name="userinfo_txt_area">地区</string>
    <string name="userinfo_txt_sign">个性签名</string>
    <string name="userinfo_txt_noinput">未填写</string>
    <string name="userinfo_txt_nosettings">未设置</string>
    <string name="userinfo_txt_note_mark">设置备注和标签</string>
    <string name="userinfo_btn_add_contact">添加到通讯录</string>
    <string name="userinfo_btn_send_msg">发消息</string>
    <string name="userinfo_btn_send_video">视频聊天</string>
    <string name="userinfo_txt_wechat_no">微信号:</string>

    <!--contact-->
    <string name="addcontact_title">添加联系人</string>
    <string name="addcontact_search">正在查找联系人...</string>
    <string name="addcontact_adding">正在添加...</string>
    <string name="addcontact_send_msg">发送</string>
    <string name="addcontact_send_msg_title">你需要发送验证申请,等对方通过</string>
    <string name="addcontact_send_msg_prefix">我是</string>
    <string name="addcontact_be_friented">已添加</string>


    <!-- Dicover-->
    <string name="discover_txt_pengyouquan">朋友圈</string>
    <string name="discover_txt_saoyisao">扫一扫</string>
    <string name="discover_txt_yaoyiyao">摇一摇</string>
    <string name="discover_txt_nearby">附近的人</string>
    <string name="discover_txt_piaoliuping">漂流瓶</string>
    <string name="discover_txt_shop">购物</string>
    <string name="discover_txt_game">游戏</string>

    <!-- default -->
    <string name="def_empty_data_text">空空如也，神马都没有</string>
    <string name="def_empty_button_retry">重试</string>
    <string name="def_net_error_text">网络不给力</string>
    <string name="def_data_loading">加载中&#8230;</string>
    <string name="def_more">上拉加载更多&#8230;</string>
    <string name="key_back_msg">再次按返回键退出</string>

    <!-- 钱包 -->
    <string name="wallet_txt_lingqian">零钱</string>
    <string name="wallet_txt_yinhangka">银行卡</string>
    <string name="wallet_txt_cards">3张</string>

    <!-- 设置 -->
    <string name="setting_txt_usersafe">账号安全</string>
    <string name="setting_txt_msgtip">新消息通知</string>
    <string name="setting_txt_yinsi">隐私</string>
    <string name="setting_txt_tongyong">通用</string>
    <string name="setting_txt_about">关于微信</string>
    <string name="setting_btn_exit">退出登录</string>


    <!--消息码,系统返回值-->
    <string name="msg_101">msg register username exists</string>
    <string name="msg_102">msg register fail</string>
    <string name="msg_103">msg unregister fail</string>
    <string name="msg_104">msg user search fail</string>
    <string name="msg_105">msg login unknow user</string>
    <string name="msg_106">msg login error password</string>
    <string name="msg_107">msg login success</string>
    <string name="msg_108">msg user same nick</string>
    <string name="msg_109">msg user update nick fail</string>
    <string name="msg_110">msg user same password</string>
    <string name="msg_111">msg user update password fail</string>
    <string name="msg_112">msg location upload fail</string>
    <string name="msg_113">msg location update fail</string>
    <string name="msg_201">msg register upload avatar fail</string>
    <string name="msg_202">msg upload avatar fail</string>
    <string name="msg_301">msg contact firended</string>
    <string name="msg_302">msg contact add fail</string>
    <string name="msg_303">msg contact del fail</string>
    <string name="msg_304">msg get contact all fail</string>
    <string name="msg_305">msg get contact pages fail</string>
    <string name="msg_401">msg group hxid exists</string>
    <string name="msg_402">msg group create fail</string>
    <string name="msg_403">msg group add member fail</string>
    <string name="msg_404">msg group get members fail</string>
    <string name="msg_405">msg group unkonw</string>
    <string name="msg_406">msg group same name</string>
    <string name="msg_407">msg group update name fail</string>
    <string name="msg_408">msg group delete member fail</string>
    <string name="msg_409">msg group delete members fail</string>
    <string name="msg_410">msg group delete fail</string>
    <string name="msg_411">msg group find by gourp id fail</string>
    <string name="msg_412">msg group find by hx id fail</string>
    <string name="msg_413">msg group find by user name fail</string>
    <string name="msg_414">msg group find by group name fail</string>
    <string name="msg_415">msg public group fail</string>
    <string name="msg_501">msg location get fail</string>
    <string name="msg_999">msg unknow</string>
    <string name="msg_1">msg illegal request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="User_name_cannot_be_modify">用户名不能被修改</string>
    <string name="toast_nick_not_modify">昵称未修改</string>
    <string name="groups_avatar">群组头像</string>

</resources>
