<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eff2f6"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <include layout="@layout/view_title_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:scrollbars="none"></ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/black3"/>

        <RelativeLayout
            android:id="@+id/layout_user_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/setting_item_selector"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                style="@style/list_txt_Style"
                android:layout_marginTop="10dp"
                android:text="@string/userinfo_txt_avatar"/>

            <ImageView
                android:id="@+id/iv_userinfo_avatar"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/default_hd_avatar"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/black3"/>

        <LinearLayout
            android:id="@+id/layout_userinfo_nick"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_item_selector">

            <TextView
                style="@style/list_txt_Style_without_nopadding"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/userinfo_txt_nick"/>

            <TextView
                android:id="@+id/tv_userinfo_nick"
                style="@style/list_txt_Style_without_nopadding_right"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/userinfo_txt_nosettings"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/black3"/>

        <LinearLayout
            android:id="@+id/layout_userinfo_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_item_selector">

            <TextView
                style="@style/list_txt_Style_without_nopadding"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/userinfo_txt_name"/>

            <TextView
                android:id="@+id/tv_userinfo_name"
                style="@style/list_txt_Style_without_nopadding_right"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/userinfo_txt_nosettings"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/black3"/>

        <TextView
            android:id="@+id/tv_userinfo_qrcode"
            style="@style/list_txt_Style"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/right"
            android:text="@string/userinfo_txt_qrcode"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/black3"/>

        <TextView
            android:id="@+id/tv_userinfo_address"
            style="@style/list_txt_Style_without_right"
            android:drawablePadding="10dp"
            android:text="@string/userinfo_txt_address"/>

        <LinearLayout
            android:id="@+id/layout_userinfo_sex"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/setting_item_selector">

            <TextView
                style="@style/list_txt_Style_without_nopadding"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/userinfo_txt_sex"/>

            <TextView
                android:id="@+id/tv_userinfo_sex"
                style="@style/list_txt_Style_without_nopadding_right"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/userinfo_txt_nosettings"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/black3"/>

        <LinearLayout
            android:id="@+id/layout_userinfo_area"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_item_selector">

            <TextView
                style="@style/list_txt_Style_without_nopadding"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/userinfo_txt_area"/>

            <TextView
                android:id="@+id/tv_userinfo_area"
                style="@style/list_txt_Style_without_nopadding_right"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/userinfo_txt_nosettings"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/black3"/>

        <LinearLayout
            android:id="@+id/layout_userinfo_sign"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_item_selector">

            <TextView
                style="@style/list_txt_Style_without_nopadding"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/userinfo_txt_sign"/>

            <TextView
                android:id="@+id/tv_userinfo_sign"
                style="@style/list_txt_Style_without_nopadding_right"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/userinfo_txt_noinput"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.3dp"
            android:background="@color/black3"/>
    </LinearLayout>
</LinearLayout>
